--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <h1>SPORT PREDICT</h1>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",    '#' %></li>
+        <li><%= link_to "Home",  root_path %></li>
         <li><%= link_to "Help",    '#' %></li>
         <li><%= link_to "Log in", '#' %></li>
       </ul>
